--- a/colorGame.css
+++ b/colorGame.css
@@ -1,5 +1,7 @@
 body {
     background-color: #232323;
+    margin: 0;
+    font-family: 'Montserrat', 'Avenir';
 }
 
 .square {
@@ -18,6 +20,16 @@ body {
 h1 {
     color: #fff;
     text-align: center;
+    background: steelblue;
+    margin: 0;
+    font-weight: normal;
+    text-transform: uppercase;
+    line-height: 1.1;
+    padding: 20px 0;
+}
+
+#display {
+    font-size: 200%;
 }
 
 #message {
