--- a/colorGame.css
+++ b/colorGame.css
@@ -10,11 +10,15 @@ body {
     padding-bottom: 30%;
     float: left;
     margin: 1.66%;
+    border-radius: 15%;
+    transition: background 0.6s;
+    -webkit-transition: background 0.6s;
+    -moz-transition: background 0.6s;
 }
 
 #container {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 
 h1 {
@@ -34,6 +38,8 @@ h1 {
 
 #message {
     color: #232323;
+    display: inline-block;
+    width: 20%;
 }
 
 #stripe {
@@ -44,5 +50,25 @@ h1 {
 }
 
 .selected {
-    background-color: blue;
+    color: #fff;
+    background-color: steelblue;
+}
+
+button {
+    border: none;
+    text-transform: uppercase;
+    height: 100%;
+    font-weight: 700;
+    color: steelblue;
+    letter-spacing: 1px;
+    font-size: inherit;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+
+}
+
+button:hover {
+    color: #fff;
+    background-color: steelblue;
 }
