--- a/colorGame.css
+++ b/colorGame.css
@@ -24,7 +24,7 @@ body {
 h1 {
     color: #fff;
     text-align: center;
-    background: steelblue;
+    background: #396afc;
     margin: 0;
     font-weight: normal;
     text-transform: uppercase;
@@ -51,7 +51,7 @@ h1 {
 
 .selected {
     color: #fff;
-    background-color: steelblue;
+    background-color: #396afc;
 }
 
 button {
@@ -59,7 +59,7 @@ button {
     text-transform: uppercase;
     height: 100%;
     font-weight: 700;
-    color: steelblue;
+    color: #396afc;
     letter-spacing: 1px;
     font-size: inherit;
     transition: all 0.3s;
@@ -71,5 +71,5 @@ button {
 
 button:hover {
     color: #fff;
-    background-color: steelblue;
+    background-color: #396afc;
 }
